yamls/deploy-magno/http_route_rook-ceph.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: dashboard-ceph-route
  namespace: rook-ceph 
spec:
  hostnames:
    - ceph.deinfra.sc.gov.br
  parentRefs:
    - name: shared-gateway
      namespace: infra-ns
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 7000
